Add /me and /tree for visualization
